--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/Develop/public/icons/icon-192x192.png",
+      "src": "../public/icons/icon-192x192.png",
       "type": "../public/icons/icon-192x192.png",
       "sizes": "192x192"
     },
     {
-      "src": "/Develop/public/icons/icon-512x512.png",
+      "src": "../public/icons/icon-512x512.png",
       "type": "../public/icons/icon-512x512.png",
       "sizes": "512x512"
     }
