--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
-    "mongoose": "^5.5.15",
+    "mongoose": "^5.13.11",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0"
   }
 }
