update service worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "../public/icons/icon-192x192.png",
-      "type": "../public/icons/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
+      "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "../public/icons/icon-512x512.png",
-      "type": "../public/icons/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
+      "type": "image/png",
       "sizes": "512x512"
     }
   ]
